# deadlockparser

./: deadlockparser.cabal
src/: Main.hs
